changed List.of to Arrays.asList