@@ -6,6 +6,7 @@ import org.springframework.context.annotation.Configuration;
 
 import java.time.LocalDate;
 import java.time.Month;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -28,7 +29,7 @@ public class StudentConfig {
             );
 
             repository.saveAll(
-                    List.of(edgar, alex)
+                    Arrays.asList(edgar, alex)
             );
         };
     }
